--- a/src/sass/blocks/_sidepanel.scss
+++ b/src/sass/blocks/_sidepanel.scss
@@ -11,12 +11,12 @@
     &__divider {
         height: 70px;
         width: 2px;
-        background-color: yellow;
+        background-color: $main-color;
     }
     &__text {
         font-weight: 700;
         font-size: 16px;
-        color: yellow;
+        color: $main-color;
         width: 25px;
         height: 150px;
         writing-mode: vertical-lr;
@@ -24,7 +24,7 @@
     }
     &__link {
         svg path {
-            fill: yellow;
+            fill: $main-color;
         }
     }
 }
