--- a/src/sass/blocks/_titles.scss
+++ b/src/sass/blocks/_titles.scss
@@ -3,10 +3,12 @@
     font-size: 36px;
     color: #000;
     line-height: 60px;
+    margin-top: 6px;
     &_fz48 {
         font-size: 48px;
         color: #fff;
         line-height: 60px;
+        font-weight: 700;
     }
 }
 
@@ -22,3 +24,4 @@
         line-height: 21px;
     }
 }
+
