create third screen

--- a/src/sass/blocks/_titles.scss
+++ b/src/sass/blocks/_titles.scss
@@ -1,27 +1,33 @@
 .title {
-    font-weight: 700;
+    font-weight: bold;
     font-size: 36px;
     color: #000;
     line-height: 60px;
     margin-top: 6px;
-    &_fz48 {
-        font-size: 48px;
-        color: #fff;
-        line-height: 60px;
-        font-weight: 700;
-    }
-}
-
-.subtitle {
-    font-weight: 700;
-    font-size: 16px;
-    color: #000;
-    &_white {
-        color: #fff;
-    }
     &_fz14 {
         font-size: 14px;
         line-height: 21px;
     }
+    &_fz16 {
+        font-size: 16px;
+        line-height: 24px;
+        margin-top: 0;
+    }
+    &_fz16-white {
+        color: #fff;
+        font-size: 16px;
+        line-height: 24px;
+    }
+    &_fz20 {
+        font-size: 20px;
+        line-height: 30px;
+    }
+    &_fz48 {
+        font-size: 48px;
+        color: #fff;
+        line-height: 60px;
+    }
 }
+
+
 
