--- a/src/sass/blocks/_about.scss
+++ b/src/sass/blocks/_about.scss
@@ -1,5 +1,5 @@
 .about {
-    padding: 120px 0;
+    padding-top: 120px;
     &__subtitle {
         position: relative;
         padding-left: 12px;
@@ -30,6 +30,9 @@
             color: #000000;
             margin-top: 20px;
         }
+        .divider {
+            margin: 0;
+        }
     }
     &__skills {
         grid-row: 2 / 3;
@@ -47,12 +50,12 @@
         }
         &-circle {
             position: relative;
-            padding: 0 0 0 15px;
+            padding: 5px 0 0 15px;
             height: 20px;
             @include circle;
             &:before {
                 content: '';
-                top: -15px;
+                top: -10px;
             }
         }
         &-descr {
