--- a/src/sass/blocks/_about.scss
+++ b/src/sass/blocks/_about.scss
@@ -1,6 +1,6 @@
 .about {
     padding-top: 120px;
-    &__subtitle {
+    &__title {
         position: relative;
         padding-left: 12px;
         z-index: 2;
