--- a/src/sass/blocks/_about.scss
+++ b/src/sass/blocks/_about.scss
@@ -13,7 +13,7 @@
         grid-auto-rows: minmax(245px, auto);
         gap: 40px 70px;
     }
-    &__img {
+    &__photo {
         grid-row: 1 / 3;
         grid-column: 1/2;
         img {
