--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,6 +12,7 @@
 @import 'blocks/about';
 @import 'blocks/resume';
 @import 'blocks/skills';
+@import 'blocks/pageup';
 @import 'blocks/portfolio';
 @import 'blocks/contacts';
 
