--- a/src/sass/blocks/_sidepanel.scss
+++ b/src/sass/blocks/_sidepanel.scss
@@ -26,5 +26,9 @@
         svg path {
             fill: $main-color;
         }
+        svg {
+            height: 25px;
+            width: 25px;
+        }
     }
 }
