--- a/src/sass/blocks/_about.scss
+++ b/src/sass/blocks/_about.scss
@@ -18,6 +18,8 @@
         grid-column: 1/2;
         img {
             width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
     }
     &__me {
