--- a/src/sass/blocks/_contacts.scss
+++ b/src/sass/blocks/_contacts.scss
@@ -15,6 +15,8 @@
     &__photo {
         img {
             width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
     }
     .divider {
@@ -52,9 +54,11 @@
             border: 2px solid red;
         }
         label.error {
+            position: absolute;
             display: block;
             border: none;
-            text-align: center
+            text-align: center;
+            font-size: 15px;
         }
         .label {
             position: absolute;
@@ -66,6 +70,21 @@
             font-size: 12px;
             margin-bottom: 0;
             background-color: #fff;
+        }
+    }
+    &__triggers {
+        grid-column: 1 / 3;
+        display: grid;
+        grid-template-columns: repeat(2, auto);
+        column-gap: 35px;
+    }
+    &__policy {
+        position: relative;
+        font-size: 12px;
+        line-height: 14px;
+        align-self: center;
+        input {
+            margin-right: 10px;
         }
     }
     &__input  {
