--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -15,6 +15,7 @@
 @import 'blocks/pageup';
 @import 'blocks/portfolio';
 @import 'blocks/contacts';
+@import 'blocks/policy';
 
 * {
     font-family: 'Poppins', sans-serif;
