--- a/src/sass/blocks/_about.scss
+++ b/src/sass/blocks/_about.scss
@@ -33,7 +33,7 @@
             margin-top: 20px;
         }
         .divider {
-            margin: 0;
+            margin: 10px 0 0 0;
         }
     }
     &__skills {
