--- a/src/sass/blocks/_titles.scss
+++ b/src/sass/blocks/_titles.scss
@@ -1,9 +1,11 @@
 .title {
     font-weight: bold;
-    font-size: 36px;
     color: #000;
-    line-height: 60px;
     margin-top: 6px;
+    &_fz36 {
+        font-size: 36px;
+        line-height: 60px;
+    }
     &_fz14 {
         font-size: 14px;
         line-height: 21px;
