--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -16,6 +16,7 @@
 @import 'blocks/portfolio';
 @import 'blocks/contacts';
 @import 'blocks/policy';
+@import 'blocks/media';
 
 * {
     font-family: 'Poppins', sans-serif;
